--- a/help.html
+++ b/help.html
@@ -477,7 +477,7 @@ function getPosition(el) {
 <br><br>
 <font color="#B4CCB0">♡ what's the problem, little angel ? how are you feeling ?</font>
 <br><br>
-<a href="#calm"><font color="#A0B99C">i need to calm down</font></a> | <a href="#numb"><font color="#A0B99C">i feel numb</font></a> | <a href="#care"><font color="#A0B99C">i want to feel good</font></a> | <a href="#cut"><font color="#A0B99C">i cut myself sometimes</font></a> | <a href="#stress"><font color="#A0B99C">i'm stressed</font></a> | <a href="#suicide"><font color="#A0B99C">i don't want to live anymore</font></a> | <a href="#lovelife"><font color="#A0B99C">i want to fall in love with life</font></a> | <a href="#depression"><font color="#A0B99C">i'm depressed</font></a> | <a href="#panic"><font color="#A0B99C">i'm scared, in panic</font></a> | <a href="#letitgo"><font color="#A0B99C">i want to forget the bad things</font></a> | <a href="#deprtips"><font color="#A0B99C">i need tips for depression cope</font></a> | <a href="#introvert"><font color="#A0B99C">i want to take care of a very introverted person</font></a> | <a href="#miss"><font color="#A0B99C">i can't understand introverted people</font></a> | <a href="#cry"><font color="#A0B99C">i cry a lot</font></a> | <a href="#happen"><font color="#A0B99C">what will happen to me</font></a> | <a href="#period"><font color="#A0B99C">i'm at that time of the month</font></a> | <a href="#procrastinating"><font color="#A0B99C">help me stop procrastinating</font></a> | <a href="#self"><font color="#A0B99C">my self esteem goes low</font></a> | <a href="#health"><font color="#A0B99C">how to improve my mental health</font></a> | <a href="#improve"><font color="#A0B99C">i want to improve on something that i do</font></a> | <a href="#anxious"><font color="#A0B99C">i want to take care of a very anxious person</font></a> | <a href="#anxiety"><font color="#A0B99C">i'm anxious</font></a> | <a href="#life"><font color="#A0B99C">i want to live better</font></a> | <a href="#tea"><font color="#A0B99C">i don't know which tea is the best for me</font></a> | <a href="#paranoia"><font color="#A0B99C">i want to take care of someone with paranoia</font></a> | <a href="#kindness"><font color="#A0B99C">i want to show kindness</font></a> | <a href="#mood"><font color="#A0B99C">i'm in a bad mood</font></a> | <a href="#rumors"><font color="#A0B99C">i don't want people to spread rumors about me</font></a> | <a href="#pressure"><font color="#A0B99C">i have problems with my blood pressure</font></a> | <a href="#diabetes"><font color="#A0B99C">i want to better understand children's diabetes</font></a> | <a href="#sleep"><font color="#A0B99C">i can't sleep</font></a>
+<a href="#calm"><font color="#A0B99C">i need to calm down</font></a> | <a href="#numb"><font color="#A0B99C">i feel numb</font></a> | <a href="#care"><font color="#A0B99C">i want to feel good</font></a> | <a href="#cut"><font color="#A0B99C">i cut myself sometimes</font></a> | <a href="#stress"><font color="#A0B99C">i'm stressed</font></a> | <a href="#suicide"><font color="#A0B99C">i don't want to live anymore</font></a> | <a href="#lovelife"><font color="#A0B99C">i want to fall in love with life</font></a> | <a href="#depression"><font color="#A0B99C">i'm depressed</font></a> | <a href="#panic"><font color="#A0B99C">i'm scared, in panic</font></a> | <a href="#letitgo"><font color="#A0B99C">i want to forget the bad things</font></a> | <a href="#deprtips"><font color="#A0B99C">i need tips for depression cope</font></a> | <a href="#introvert"><font color="#A0B99C">i want to take care of a very introverted person</font></a> | <a href="#miss"><font color="#A0B99C">i can't understand introverted people</font></a> | <a href="#cry"><font color="#A0B99C">i cry a lot</font></a> | <a href="#happen"><font color="#A0B99C">what will happen to me</font></a> | <a href="#period"><font color="#A0B99C">i'm at that time of the month</font></a> | <a href="#procrastinating"><font color="#A0B99C">help me stop procrastinating</font></a> | <a href="#self"><font color="#A0B99C">my self esteem goes low</font></a> | <a href="#health"><font color="#A0B99C">how to improve my mental health</font></a> | <a href="#improve"><font color="#A0B99C">i want to improve on something that i do</font></a> | <a href="#anxious"><font color="#A0B99C">i want to take care of a very anxious person</font></a> | <a href="#anxiety"><font color="#A0B99C">i'm anxious</font></a> | <a href="#life"><font color="#A0B99C">i want to live better</font></a> | <a href="#tea"><font color="#A0B99C">i don't know which tea is the best for me</font></a> | <a href="#paranoia"><font color="#A0B99C">i want to take care of someone with paranoia</font></a> | <a href="#kindness"><font color="#A0B99C">i want to show kindness</font></a> | <a href="#loved"><font color="#A0B99C">i want to make someone feel loved</font></a> | <a href="#mood"><font color="#A0B99C">i'm in a bad mood</font></a> | <a href="#rumors"><font color="#A0B99C">i don't want people to spread rumors about me</font></a> | <a href="#pressure"><font color="#A0B99C">i have problems with my blood pressure</font></a> | <a href="#diabetes"><font color="#A0B99C">i want to better understand children's diabetes</font></a> | <a href="#sleep"><font color="#A0B99C">i can't sleep</font></a>
 <br>
 <br><br><br>
 <br>
@@ -789,6 +789,22 @@ function getPosition(el) {
 <br>
 <br>
 <br>
+<br><a name="loved" id="loved"></a>
+<img src="http://i.imgur.com/g7Put7W.gif"> <font color="#AAB9BF">THINGS THAT MAKE PEOPLE FEEL LOVED</font><br><br>
+・ making them a playlist<br>
+・ baking them cookies<br>
+・ giving them flowers<br>
+・ creating art for them<br>
+・ random reminders that they are loved<br>
+・ writing them a poem<br>
+・ complimenting them on their talents<br>
+・ asking how their day was<br>
+・ sending them links to things you think they will like<br>
+・ random hugs<br>
+・ "this made me think of you"<br>
+<br>
+<br>
+<br>
 <br><a name="mood" id="mood"></a>
 <img src="http://i.imgur.com/g7Put7W.gif"> <font color="#AAB9BF">LITTLE THINGS THAT HELP MOODS</font><br><br>
 ・ getting enough sunshine<br>
@@ -935,7 +951,7 @@ p { margin: 0; }
 <br><br>
 <font color="#B4CCB0">♡ qual o problema, anjinho ? como você está se sentindo ?</font>
 <br><br>
-<a href="#calma"><font color="#A0B99C">preciso me acalmar</font></a> | <a href="#entorpecido"><font color="#A0B99C">me sinto entorpecido</font></a> | <a href="#bem"><font color="#A0B99C">quero me sentir bem</font></a> | <a href="#cortar"><font color="#A0B99C">eu me corto as vezes</font></a> | <a href="#estresse"><font color="#A0B99C">estou estressado</font></a> | <a href="#suicidio"><font color="#A0B99C">não quero mais viver</font></a> | <a href="#amorvida"><font color="#A0B99C">quero me apaixonar pela vida</font></a> | <a href="#depressao"><font color="#A0B99C">estou com depressão</font></a> | <a href="#panico"><font color="#A0B99C">estou com medo, em pânico</font></a> | <a href="#deixe"><font color="#A0B99C">quero esquecer as coisas ruins</font></a> | <a href="#deprdicas"><font color="#A0B99C">preciso de dicas para depressão</font></a> | <a href="#introversao"><font color="#A0B99C">quero cuidar de uma pessoa introvertida</font></a> | <a href="#erros"><font color="#A0B99C">eu não consigo entender pessoas introvertidas</font></a> | <a href="#choro"><font color="#A0B99C">eu choro muito</font></a> | <a href="#acontecer"><font color="#A0B99C">o que vai acontecer comigo</font></a> | <a href="#periodo"><font color="#A0B99C">estou naqueles dias do mês</font></a> | <a href="#procrastinar"><font color="#A0B99C">me ajude a parar de procrastinar</font></a> | <a href="#estima"><font color="#A0B99C">minha auto estima anda baixa</font></a> | <a href="#mental"><font color="#A0B99C">como melhorar minha saúde mental</font></a> | <a href="#melhorar"><font color="#A0B99C">quero melhorar em algo que faço</font></a> | <a href="#ansiosa"><font color="#A0B99C">quero cuidar de uma pessoa com ansiedade</font></a> | <a href="#ansiedade"><font color="#A0B99C">estou com ansiedade</font></a> | <a href="#viver"><font color="#A0B99C">quero viver melhor</font></a> | <a href="#cha"><font color="#A0B99C">eu não sei qual chá é o melhor pra mim</font></a> | <a href="#paranoica"><font color="#A0B99C">quero cuidar de uma pessoa com paranoia</font></a> | <a href="#gentileza"><font color="#A0B99C">eu quero demonstrar gentileza</font></a> | <a href="#humor"><font color="#A0B99C">estou de mau humor</font></a> | <a href="#rumores"><font color="#A0B99C">não quero que as pessoas espalhem rumores sobre mim</font></a> | <a href="#pressao"><font color="#A0B99C">tenho problemas com minha pressão sanguinea</font></a> | <a href="#diabetess"><font color="#A0B99C">queria entender melhor a diabetes infantil</font></a> | <a href="#insonia"><font color="#A0B99C">não consigo dormir</font></a>
+<a href="#calma"><font color="#A0B99C">preciso me acalmar</font></a> | <a href="#entorpecido"><font color="#A0B99C">me sinto entorpecido</font></a> | <a href="#bem"><font color="#A0B99C">quero me sentir bem</font></a> | <a href="#cortar"><font color="#A0B99C">eu me corto as vezes</font></a> | <a href="#estresse"><font color="#A0B99C">estou estressado</font></a> | <a href="#suicidio"><font color="#A0B99C">não quero mais viver</font></a> | <a href="#amorvida"><font color="#A0B99C">quero me apaixonar pela vida</font></a> | <a href="#depressao"><font color="#A0B99C">estou com depressão</font></a> | <a href="#panico"><font color="#A0B99C">estou com medo, em pânico</font></a> | <a href="#deixe"><font color="#A0B99C">quero esquecer as coisas ruins</font></a> | <a href="#deprdicas"><font color="#A0B99C">preciso de dicas para depressão</font></a> | <a href="#introversao"><font color="#A0B99C">quero cuidar de uma pessoa introvertida</font></a> | <a href="#erros"><font color="#A0B99C">eu não consigo entender pessoas introvertidas</font></a> | <a href="#choro"><font color="#A0B99C">eu choro muito</font></a> | <a href="#acontecer"><font color="#A0B99C">o que vai acontecer comigo</font></a> | <a href="#periodo"><font color="#A0B99C">estou naqueles dias do mês</font></a> | <a href="#procrastinar"><font color="#A0B99C">me ajude a parar de procrastinar</font></a> | <a href="#estima"><font color="#A0B99C">minha auto estima anda baixa</font></a> | <a href="#mental"><font color="#A0B99C">como melhorar minha saúde mental</font></a> | <a href="#melhorar"><font color="#A0B99C">quero melhorar em algo que faço</font></a> | <a href="#ansiosa"><font color="#A0B99C">quero cuidar de uma pessoa com ansiedade</font></a> | <a href="#ansiedade"><font color="#A0B99C">estou com ansiedade</font></a> | <a href="#viver"><font color="#A0B99C">quero viver melhor</font></a> | <a href="#cha"><font color="#A0B99C">eu não sei qual chá é o melhor pra mim</font></a> | <a href="#paranoica"><font color="#A0B99C">quero cuidar de uma pessoa com paranoia</font></a> | <a href="#gentileza"><font color="#A0B99C">eu quero demonstrar gentileza</font></a> | <a href="#amado"><font color="#A0B99C">eu quero fazer alguém se sentir amado</font></a> | <a href="#humor"><font color="#A0B99C">estou de mau humor</font></a> | <a href="#rumores"><font color="#A0B99C">não quero que as pessoas espalhem rumores sobre mim</font></a> | <a href="#pressao"><font color="#A0B99C">tenho problemas com minha pressão sanguinea</font></a> | <a href="#diabetess"><font color="#A0B99C">queria entender melhor a diabetes infantil</font></a> | <a href="#insonia"><font color="#A0B99C">não consigo dormir</font></a>
 <br>
 <br><br><br>
 <br>
@@ -1242,6 +1258,22 @@ p { margin: 0; }
 ・ procure por dicas práticas para ajudar outras pessoas<br>
 ・ não se envolva em fofocas ou dramas, esse tipo de ambiente não faz bem a ninguém<br>
 ・ não incentive ninguém a atacar outra pessoa porque ela fez algo ruim, palavras ruins e intimidação não ensinam ninguém a ser uma pessoa melhor. tente conversar privadamente e de forma pacífica, então se nada puder ser feito, denuncie.<br>
+<br>
+<br>
+<br>
+<br><a name="amado" id="amado"></a>
+<img src="http://i.imgur.com/g7Put7W.gif"> <font color="#AAB9BF">COISAS QUE FAZEM AS PESSOAS SE SENTIREM AMADAS</font><br><br>
+・ criar-lhes uma playlist<br>
+・ assar-lhes biscoitos<br>
+・ dar-lhes flores<br>
+・ criar-lhes arte<br>
+・ lembretes aleatórios que eles são amados<br>
+・ escrever-lhes um poema<br>
+・ elogiá-los sobre seus talentos<br>
+・ perguntar-lhes como foi seu dia<br>
+・ enviar links de coisas que você acha que eles vão gostar<br>
+・ abraços aleatórios<br>
+・ "isso me fez pensar em você"<br>
 <br>
 <br>
 <br>
