--- a/archive.html
+++ b/archive.html
@@ -350,6 +350,146 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/><img src="https://i.imgur.com/rR5ekXW.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>april . 05 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/zGuRYOk.gif"/><br>
+hmpf, i've been super anxious these days, which has decreased my productivity <img src="https://i.imgur.com/5tP1Qmb.gif"/><br>
+i'm trying hard to keep on doing my tasks, persistence is very important !!<br>
+i always feel like a very good girl when i finish doing what i have to do <img src="https://i.imgur.com/tXEidyn.gif"/><br>
+( don't worry, i'm having enough rest, or i'd be overwhelmed, right ? )<br>
+<br>
+day 8 is bubu's birthday !!!! <img src="https://i.imgur.com/7cdpZQY.gif"/><br>
+i'm obviously going to make surprises for him and prepare something very special. i'm so excited !!<br>
+<br>
+i'm going to show you today some of the first things i've embroidered, my favorite ones :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/87CdkN4.png"/></center>
+
+<br>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1138&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i think it turned out really cute and good images to use as graphics !<br>
+i've been embroidering a lot lately, but these are the first ones and are more special to show you for now.<br>
+<br>
+and i also want to do something really nice that was asked me a few times : show you my phone and how it's decorated !<br>
+i'll show you my phone theme and also my line, with the two themes i have so far <img src="https://i.imgur.com/PPUtdFo.gif"/><br>
+i really like the idea, since i have not posted any kind of video here so far, these will be the first ones.<br>
+i hope you like it :<br>
+<br>
+<br><br>
+<center><video width="250" height="auto" controls>
+<source src="https://files.catbox.moe/Ct8qXb.webm" type="video/webm">
+</video></center><br><br>
+<center><video width="250" height="auto" controls>
+<source src="https://files.catbox.moe/tgclii.webm" type="video/webm">
+</video></center><br><br>
+<center><video width="250" height="auto" controls>
+<source src="https://files.catbox.moe/Ov5w7h.webm" type="video/webm">
+</video></center>
+<br><br>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/UKhQauT.gif"/>&nbsp;&nbsp; { &nbsp;1213&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/EL39DaW.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+even though my phone is really old now, i think it's really cute !! <img src="https://i.imgur.com/a3LyqhZ.gif"/><br>
+but when i have a new one, i'm going to make it even cuter and show you.<br>
+about the video style, you know i could simply record the screen, but apps to record don't work well on my phone ( which is pretty old, as i said )<br>
+ah, and please don't ask me to add on line, because it's extremely personal ////<br>
+<br>
+for today's q&a the subject will be very... heavy.<br>
+i don't know if it's appropriate for you if you're a minor, but i would say that it is something very important and needs to be talked about. i'll be careful !
+<br><br>
+<center><img src="http://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="http://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+the sexualization is a very controversial subject. it can be seen as horrible, beautiful, okay, or even as an art form. it can be beautiful, but it can also be dangerous. there is a fine line between healthy and unhealthy sexuality, which causes people to be often completely in favor or against. i think there are big limits to it.<br>
+sexual content and pornography is very dangerous because often this industry involves people being harmed and abused, and make sex seem vulgar and casual. this becomes an addiction and is totally wrong, it ruins you, makes you have a lot of problems and mess up your whole life !!<br>
+this goes a long way from kinks and different forms of sexuality, it's about self-respect, safety, happiness, purity and health.<br>
+i personally consider that people who are involved with pornography and prostitution ( even on the internet ) are often source of many problems, for themselves and for many others ( even children ) and i totally do not support this industry. i am not exactly against drawings and animations, for they are not real people ( when it comes especially to art, i support quite as well as artistic nudity in any case ). but, this type of content still has moral limits and should be reserved for adults, always.<br>
+puberty is the time when we should be very careful about sexuality, because it is not the moment to do it, but it's natural to be curious and very important to be educated about it. repressed sexuality is often degenerate. many children at puberty become hypersexualized and even not having sex, come very close to it several times and with several different people. they can often develop weird kinks and even support pedophilia. they get hurt and traumatized for a lifetime, even hurting other people in the process.<br>
+<br>
+the excessive sexualization can bring hypersexualization to people, which is very dangerous for their lives.<br>
+the sex itself is not impure, since we're animals and it's healthy and natural to have sexuality.<br>
+but sex is not only for having babies but also for pleasure. this is when it gets dangerous.<br>
+using food as an example : there are delicious foods that are healthy and some that are bad for our bodies and even if food is essential for our survival, consuming too much food can destroy our lives. everything has limits.<br>
+hypersexuality can lead to need for casual sex, and it is always a problem because the more you do, the more you want to do. this in addition to being able to bring diseases, is dangerous, not healthy and bad for your mind.<br>
+this is a major problem of early sexuality, since children do not have a safe way to have sex. it's always wrong, harmful and traumatic for them.<br>
+it's very super important that sexuality be brought in a healthy way to make everyone happy. treating it as wrong and dirty does not help in this process !!<br>
+the right sex would be not necessarily to make babies, but the one we do healthfully often and only with people we trust. the sex with whom we love is infinitely better and makes you and the other person happy. it doesn't hurt anyone, it doesn't make you sad, it's pure, safe and comfortable. makes you feel loved. there is no way to be something bad !<br>
+<br>
+so take care of yourselves, please, it will do miracles to your mental health. i promise.<br>
+i really hope my words are easy to understand !<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/4nKAcU5.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1136&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;2&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/5eERCEW.png"/><img src="https://i.imgur.com/5eERCEW.png"/><img src="https://i.imgur.com/5eERCEW.png"/><img src="https://i.imgur.com/5eERCEW.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/F97pcLP.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
