--- a/gaming.html
+++ b/gaming.html
@@ -584,7 +584,7 @@ anyway, this one was my second favorite dress-up game !
 <center>my highest rank, #1 !</center>
 <br><br>
 
-<center><img width="170px" height="auto" src="http://i.imgur.com/7baINO7.png"/> <img width="170px" height="auto" src="http://i.imgur.com/ATzbhFh.png"/></center>
+<center><img width="170px" height="auto" src="https://i.imgur.com/ZC2pdot.png"/> <img width="170px" height="auto" src="http://i.imgur.com/ATzbhFh.png"/></center>
 <br>
 <center>my current account.</center>
 <br><br>
