--- a/gaming.html
+++ b/gaming.html
@@ -1068,6 +1068,37 @@ just like above, i started to play a bit of tera online with the same intention.
 </div>
 </div>
 
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub>　
+l i n e　p l a y
+　<sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden;text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+i played this one for a little while but i was more into cocoppa play back then.. in the end, i really liked the items and possibilities ! i played for about a year and it was great fun, even if i just used the diary to write random things with kaomojis LOL i just can't take these game statuses seriously ( same with pupe ).
+</div>
+<br><br><center>
+<img width="150" height="auto" src="https://i.imgur.com/gb2yMS9.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/zJDuhnV.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/iBwkUO4.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/EN6KDZg.jpg"/><br><br>
+<img width="270" height="auto" src="http://i.imgur.com/ADKVAam.jpg"/>
+
+<br><br><br></center>
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+i also tested ameba pigg, and this one i only played for a few months and it is certainly much less interesting than line play, it has few interesting items and updates.
+</div>
+<br><br><center>
+<img width="150" height="auto" src="https://i.imgur.com/bT2fnz9.png"/>
+<br><br></center>
+</div>
+</div>
+</div>
+
 <br><br>
 <div class="wrapper">
 <br>
@@ -1090,37 +1121,6 @@ the megus are so adorable, this is such a relaxing game.
 <img width="300" height="auto" src="http://i.imgur.com/RDtn0j0.png"/><br><br>
 <img width="300" height="auto" src="http://i.imgur.com/UsW5KXM.png"/><br><br>
 <img width="270" height="auto" src="http://i.imgur.com/HZWfRck.jpg"/>
-<br><br></center>
-</div>
-</div>
-</div>
-
-<br><br>
-<div class="wrapper">
-<br>
-<center><sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub>　
-l i n e　p l a y
-　<sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub></center>
-<br><br>
-<div class="tooltip">
-<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden;text-align: justify;">
-<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
-i started playing line play just to test, because i've never had much interest in these chibi customization games. in the end, i really liked the items and possibilities ! i played for about a year and it was great fun, even if i just used the diary to write random things with kaomojis LOL i just can't take these game statuses seriously ( same with pupe ).
-</div>
-<br><br><center>
-<img width="150" height="auto" src="http://i.imgur.com/bvLyBjH.png"/><br><br>
-<img width="270" height="auto" src="http://i.imgur.com/ADKVAam.jpg"/><br><br>
-<img width="300" height="auto" src="http://i.imgur.com/FDgUAID.jpg"/><br><br>
-<img width="250" height="auto" src="http://i.imgur.com/bFI5Tkx.jpg"/><br><br>
-<img width="270" height="auto" src="http://i.imgur.com/CmNuCmk.jpg"/>
-
-<br><br><br></center>
-<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
-i also tested ameba pigg, and this one i only played for a few months and it is certainly much less interesting than line play, it has few interesting items and updates.
-</div>
-<br><br><center>
-<img width="150" height="auto" src="http://i.imgur.com/UU015lB.png"/> <img width="150" height="auto" src="http://i.imgur.com/F6r8Ko9.png"/><br><br>
-<img width="300" height="auto" src="http://i.imgur.com/FXTs0xR.png"/>
 <br><br></center>
 </div>
 </div>
