--- a/gaming.html
+++ b/gaming.html
@@ -586,7 +586,7 @@ anyway, this one was my second favorite dress-up game !
 
 <center><img width="170px" height="auto" src="https://i.imgur.com/ZC2pdot.png"/> <img width="170px" height="auto" src="http://i.imgur.com/ATzbhFh.png"/></center>
 <br>
-<center>my current account.</center>
+<center>my second account.</center>
 <br><br>
 <center>let's see some of my favorite shows :</center>
 <br>
@@ -1095,6 +1095,40 @@ i also tested ameba pigg, and this one i only played for a few months and it is 
 <br><br><center>
 <img width="150" height="auto" src="https://i.imgur.com/bT2fnz9.png"/>
 <br><br></center>
+</div>
+</div>
+</div>
+
+<br><br>
+<div class="wrapper">
+<br>
+<center><sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub>　
+l o v e　n i k k i
+　<sub><img src="http://i.imgur.com/CARPAP1.gif"/></sub></center>
+<br><br>
+<div class="tooltip">
+<div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden;text-align: justify;">
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+in search of dress up games that i have never heard of, i found this wonderful game with beautiful styles !!!<br>
+i'm really enjoying it, although it's a bit too easy, so i know it will be boring in a while.
+</div>
+<br><br><center>
+<img width="250" height="auto" src="https://i.imgur.com/V0VNFDO.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/xXpzz0r.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/YueUfy0.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/gMCz3K1.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/f4JMX0W.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/FitLVpw.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/yElkvDr.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/mj86aXP.jpg"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/zm0bc5d.jpg"/><br><br>
+
+</center>
+
+<br>
+<center>more styles <a href="https://photos.app.goo.gl/nKoAmelMxYC7HxbA3" id="linkhm" target="_blank">here</a> !</center>
+<br><br>
+
 </div>
 </div>
 </div>
