--- a/status.html
+++ b/status.html
@@ -397,6 +397,26 @@ p { margin: 0; }
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 <div style="text-align: left;"><br><br>
+　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.07.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109010_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090210_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=19nECcIv4zJ5K63g3dyV4qY4un0y_T75m"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109210_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092310_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1N27a3YJkOzMXOFONYpp885Do7VlDIHs3"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i'm really into dress up games again ♡</font>
+<br><br>
+<div style="text-align: left;"><br><br>
 　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.24.18</font>
 <body>
 <div style="float: right;">
@@ -575,26 +595,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">where are my wings and my heart pupils</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">03.14.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109010_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090210_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=19nECcIv4zJ5K63g3dyV4qY4un0y_T75m"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109210_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092310_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1N27a3YJkOzMXOFONYpp885Do7VlDIHs3"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">♡ i love white chocolate, especially when bubu gave it to me ///</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
