--- a/look-book.html
+++ b/look-book.html
@@ -418,7 +418,34 @@ p { margin: 0; }
 <br><br>
 <center>
 
+
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 06.07.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/IWRM6XL.png"/><br>
+<br><br>
+
+
+
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109044_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090244_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1xM52g6JTIvoNzmJjUgIGcRJ_MSWC3Lei"></script>
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109244_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092344_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1KuEJDlC0VPBoNjmJkVdlrbwd3uF1WneR"></script>
+</div>
+</font></font>
+</body>
+</center>
+
+<br><br><br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.16.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/zgCG3hj.png"/><br>
 <br><br>
@@ -654,33 +681,6 @@ yay { cursor: pointer; }
 <font family = "Tahoma"><font color="#997C7C">
 <yay><a id="_li2941852109255_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092355_"></span>&nbsp; } &nbsp;</p>
 <script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1m7L79JVyEQAkYOrqa104EKrQr_hV9lSs"></script>
-</div>
-</font></font>
-</body>
-</center>
-
-
-<br><br><br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 12.07.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/WeXMtgG.png"/><br>
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109044_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090244_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1xM52g6JTIvoNzmJjUgIGcRJ_MSWC3Lei"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109244_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092344_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1KuEJDlC0VPBoNjmJkVdlrbwd3uF1WneR"></script>
 </div>
 </font></font>
 </body>
