--- a/links.html
+++ b/links.html
@@ -364,7 +364,7 @@ position: relative;
 <font color="#7a6b6b">tumblr </font><a id="actv" title="main blog" href="https://dulci-chu.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://potix-u.my.to" target="_blank" >♡</a><br>
 <font color="#7a6b6b">fb </font><a id="actv" title="main page" href="https://www.facebook.com/potatoeswithshoes" target="_blank" >♡</a> <a id="actv" title="+16 page" href="https://www.facebook.com/potatoeswithsocks" target="_blank" >♡</a> <a id="actv" title="artsy page" href="https://www.facebook.com/liquidmilkycat" target="_blank" >♡</a><br>
 <font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
-<font color="#7a6b6b">ywot </font><a id="actv" title="world" href="http://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
+<font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
 </div>
 <br>
 <br><br><br><br><br><br><br><br><br>
@@ -378,7 +378,7 @@ if you have any questions about an account, please don't hesitate to contact me 
 <br>
 <font color="#7a6b6b">fb </font><a id="inactv" title="profile" href="https://www.facebook.com/marjorinethatsme" target="_blank" >ഒ</a><br>
 <font color="#7a6b6b">ig </font><a id="inactv" title="profile" href="https://www.instagram.com/_midpot" target="_blank" >ഒ</a><br>
-<font color="#7a6b6b">8tr </font><a id="inactv" title="playlists" href="http://8tracks.com/potetomid" target="_blank" >ഒ</a><br>
+<font color="#7a6b6b">8tr </font><a id="inactv" title="playlists" href="https://8tracks.com/potetomid" target="_blank" >ഒ</a><br>
 <br><br><br>
 
 </div>
